@@ -31,6 +31,8 @@ import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.ElementFilter;
 import javax.tools.Diagnostic.Kind;
+import org.checkerframework.checker.interning.qual.CompareToMethod;
+import org.checkerframework.checker.interning.qual.EqualsMethod;
 import org.checkerframework.checker.interning.qual.InternMethod;
 import org.checkerframework.checker.interning.qual.Interned;
 import org.checkerframework.checker.interning.qual.InternedDistinct;
@@ -215,6 +217,36 @@ public final class InterningVisitor extends BaseTypeVisitor<InterningAnnotatedTy
         }
 
         return super.visitMethodInvocation(node, p);
+    }
+
+    // Ensure that method annotations are not written on methods they don't apply to.
+    @Override
+    public Void visitMethod(MethodTree node, Void p) {
+        ExecutableElement methElt = TreeUtils.elementFromDeclaration(node);
+        boolean hasCompareToMethodAnno =
+                atypeFactory.getDeclAnnotation(methElt, CompareToMethod.class) != null;
+        boolean hasEqualsMethodAnno =
+                atypeFactory.getDeclAnnotation(methElt, EqualsMethod.class) != null;
+        boolean hasInternMethodAnno =
+                atypeFactory.getDeclAnnotation(methElt, InternMethod.class) != null;
+        int params = methElt.getParameters().size();
+        if (hasCompareToMethodAnno && !(params == 1 || params == 2)) {
+            checker.reportError(
+                    node,
+                    "invalid.method.annotation",
+                    "@CompareToMethod",
+                    "1 or 2",
+                    methElt,
+                    params);
+        } else if (hasEqualsMethodAnno && !(params == 1 || params == 2)) {
+            checker.reportError(
+                    node, "invalid.method.annotation", "@EqualsMethod", "1 or 2", methElt, params);
+        } else if (hasInternMethodAnno && !(params == 0)) {
+            checker.reportError(
+                    node, "invalid.method.annotation", "@InternMethod", "0", methElt, params);
+        }
+
+        return super.visitMethod(node, p);
     }
 
     /**
@@ -530,9 +562,16 @@ public final class InterningVisitor extends BaseTypeVisitor<InterningAnnotatedTy
                     }
                 };
 
+        boolean hasCompareToMethodAnno =
+                atypeFactory.getDeclAnnotation(enclosingMethod, CompareToMethod.class) != null;
+        boolean hasEqualsMethodAnno =
+                atypeFactory.getDeclAnnotation(enclosingMethod, EqualsMethod.class) != null;
+        int params = enclosingMethod.getParameters().size();
+
         // Determine whether or not the "then" statement of the if has a single
         // "return 0" statement (for the Comparator.compare heuristic).
-        if (overrides(enclosingMethod, Comparator.class, "compare")) {
+        if (overrides(enclosingMethod, Comparator.class, "compare")
+                || (hasCompareToMethodAnno && params == 2)) {
             final boolean returnsZero =
                     new Heuristics.Within(new Heuristics.OfKind(Tree.Kind.IF, matcherIfReturnsZero))
                             .match(getCurrentPath());
@@ -541,20 +580,27 @@ public final class InterningVisitor extends BaseTypeVisitor<InterningAnnotatedTy
                 return false;
             }
 
-            assert enclosingMethod.getParameters().size() == 2;
+            assert params == 2;
             Element p1 = enclosingMethod.getParameters().get(0);
             Element p2 = enclosingMethod.getParameters().get(1);
             return (p1.equals(lhs) && p2.equals(rhs)) || (p1.equals(rhs) && p2.equals(lhs));
 
-        } else if (overrides(enclosingMethod, Object.class, "equals")) {
-            assert enclosingMethod.getParameters().size() == 1;
+        } else if (overrides(enclosingMethod, Object.class, "equals")
+                || (hasEqualsMethodAnno && params == 1)) {
+            assert params == 1;
             Element param = enclosingMethod.getParameters().get(0);
             Element thisElt = getThis(trees.getScope(getCurrentPath()));
             assert thisElt != null;
             return (thisElt.equals(lhs) && param.equals(rhs))
                     || (thisElt.equals(rhs) && param.equals(lhs));
 
-        } else if (overrides(enclosingMethod, Comparable.class, "compareTo")) {
+        } else if (hasEqualsMethodAnno && params == 2) {
+            Element p1 = enclosingMethod.getParameters().get(0);
+            Element p2 = enclosingMethod.getParameters().get(1);
+            return (p1.equals(lhs) && p2.equals(rhs)) || (p1.equals(rhs) && p2.equals(lhs));
+
+        } else if (overrides(enclosingMethod, Comparable.class, "compareTo")
+                || (hasCompareToMethodAnno && params == 1)) {
 
             final boolean returnsZero =
                     new Heuristics.Within(new Heuristics.OfKind(Tree.Kind.IF, matcherIfReturnsZero))
@@ -564,13 +610,14 @@ public final class InterningVisitor extends BaseTypeVisitor<InterningAnnotatedTy
                 return false;
             }
 
-            assert enclosingMethod.getParameters().size() == 1;
+            assert params == 1;
             Element param = enclosingMethod.getParameters().get(0);
             Element thisElt = getThis(trees.getScope(getCurrentPath()));
             assert thisElt != null;
             return (thisElt.equals(lhs) && param.equals(rhs))
                     || (thisElt.equals(rhs) && param.equals(lhs));
         }
+
         return false;
     }
 
